--- a/app/views/daily-checks/task-list.html
+++ b/app/views/daily-checks/task-list.html
@@ -41,7 +41,7 @@
                 ]
             }) }}
 
-            <h2 class="govuk-heading-m">To do</h2>
+            <h2 class="govuk-heading-m">Checks to do</h2>
 
             <ul class="govuk-task-list">
 
@@ -50,7 +50,7 @@
                     <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./print-cheques.html" aria-describedby="print-cheques-status">
                         Print cheques
                     </a>
-                    </div>
+                    <!-- </div>
                     {% if data['chequesPrinted'] == "true" %}
                     <div class="govuk-task-list__status" id="print-cheques-status">
                         0 cheques to print
@@ -59,7 +59,7 @@
                     <div class="govuk-task-list__status" id="print-cheques-status">
                         14 cheques to print
                     </div>
-                    {% endif %}
+                    {% endif %} -->
                 </li>
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -68,9 +68,12 @@
                     List unpresented cheques
                     </a>
                 </div>
-                <div class="govuk-task-list__status" id="unpresented-cheques-status">
-                    
-                </div>
+                <!-- <div class="govuk-task-list__status" id="unpresented-cheques-status">
+                    {{ govukTag({
+                            text: "Not started",
+                            classes: "govuk-tag--grey"
+                        }) }}
+                </div> -->
                 </li>
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -79,8 +82,12 @@
                     Create master BACS file
                     </a>
                 </div>
-                <div class="govuk-task-list__status" id="bacs-file-status">
-                </div>
+                <!-- <div class="govuk-task-list__status" id="bacs-file-status">
+                    {{ govukTag({
+                            text: "Not started",
+                            classes: "govuk-tag--grey"
+                        }) }}
+                </div> -->
                 </li>
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -89,8 +96,12 @@
                     Bank list
                     </a>
                 </div>
-                <div class="govuk-task-list__status" id="bank-list-status">
-                </div>
+                <!-- <div class="govuk-task-list__status" id="bank-list-status">
+                    {{ govukTag({
+                            text: "Not started",
+                            classes: "govuk-tag--grey"
+                        }) }}
+                </div> -->
                 </li>
 
                 <!-- {{ govukInsetText({
@@ -103,8 +114,12 @@
                     Control totals
                     </a>
                 </div>
-                <div class="govuk-task-list__status" id="control-totals-status">
-                </div>
+                <!-- <div class="govuk-task-list__status" id="control-totals-status">
+                    {{ govukTag({
+                            text: "Not started",
+                            classes: "govuk-tag--grey"
+                        }) }}
+                </div> -->
                 </li>
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -113,8 +128,12 @@
                     List dishonoured cheques
                     </a>
                 </div>
-                <div class="govuk-task-list__status" id="dishonoured-cheques-status">
-                </div>
+                <!-- <div class="govuk-task-list__status" id="dishonoured-cheques-status">
+                    {{ govukTag({
+                            text: "Not started",
+                            classes: "govuk-tag--grey"
+                        }) }}
+                </div> -->
                 </li>
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -123,18 +142,40 @@
                     List witnesses
                     </a>
                 </div>
-                <div class="govuk-task-list__status" id="witnesses-status">
+                <!-- <div class="govuk-task-list__status" id="witnesses-status">
+                    {{ govukTag({
+                            text: "Not started",
+                            classes: "govuk-tag--grey"
+                        }) }}
+                </div> -->
+                </li>
+
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                <div class="govuk-task-list__name-and-hint" data-module="edge">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="#" data-message="Sorry, we have not designed this part yet" aria-describedby="bacs-file-status">
+                    List suspense
+                    </a>
                 </div>
+                <!-- <div class="govuk-task-list__status" id="bacs-file-status">
+                    {{ govukTag({
+                            text: "Not started",
+                            classes: "govuk-tag--grey"
+                        }) }}
+                </div> -->
                 </li>
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                 <div class="govuk-task-list__name-and-hint">
                     <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./outstanding-payment.html" aria-describedby="outstanding-payment-status">
-                    List outstanding payments
+                    List reversed payments
                     </a>
                 </div>
-                <div class="govuk-task-list__status" id="outstanding-payment-status">
-                </div>
+                <!-- <div class="govuk-task-list__status" id="outstanding-payment-status">
+                    {{ govukTag({
+                            text: "Not started",
+                            classes: "govuk-tag--grey"
+                        }) }}
+                </div> -->
                 </li>
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -143,7 +184,7 @@
                     Automated presented cheques
                     </a>
                 </div>
-                {% if data['chequesProcessed'] == "true" %}
+                <!-- {% if data['chequesProcessed'] == "true" %}
                     <div class="govuk-task-list__status" id="print-cheques-status">
                         0 files to process
                     </div>
@@ -151,19 +192,23 @@
                     <div class="govuk-task-list__status" id="automated-presented-status">
                         1 file to process
                     </div>
-                    {% endif %}
+                {% endif %} -->
                 
                 </li>
 
-                
+
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./presented-cheques.html" aria-describedby="presented-cheques-status">
                         List presented cheques
                     </a>
                     </div>
-                    <div class="govuk-task-list__status govuk-hint" id="presented-cheques-status">
-                    </div>
+                    <!-- <div class="govuk-task-list__status govuk-hint" id="presented-cheques-status">
+                        {{ govukTag({
+                            text: "Not started",
+                            classes: "govuk-tag--grey"
+                        }) }}
+                    </div> -->
                 </li>
 
                 
@@ -171,7 +216,7 @@
             </ul>
             
 
-            <p class="govuk-body"><a href="../finance.html" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
+            <p class="govuk-body"><a href="../finance.html" class="govuk-link govuk-link--no-visited-state">Return to finance</a></p>
 
 
 
