--- a/app/views/daily-checks/witnesses.html
+++ b/app/views/daily-checks/witnesses.html
@@ -23,13 +23,13 @@
                     {{ mojAlert({
                         variant: "success",
                         dismissible: false,
-                        html: 'Success message'
+                        html: 'Report created'
                     }) }}
                 {% elseif data['witness'] == "ready" %}
                     {{ mojAlert({
                         variant: "success",
                         dismissible: false,
-                        html: 'Success message'
+                        html: 'Report created'
                     }) }}
                 {% else %}
                 {% endif %}
@@ -127,11 +127,11 @@
 
             <p class="govuk-body">No reports have been created for daily checks.</p>
 
-            {{ govukButton({
+            <!-- {{ govukButton({
                     text: "Refresh",
                     classes: "govuk-button--secondary ",
                     href: "#"
-                }) }}
+                }) }} -->
             {% endif %}
 
 
