--- a/app/views/manual-cash-input/payment-1/check-payment.html
+++ b/app/views/manual-cash-input/payment-1/check-payment.html
@@ -16,10 +16,19 @@
 
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
 
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
+      <div class="govuk-summary-card">
+
+        <div class="govuk-summary-card__title-wrapper">
+        <h2 class="govuk-summary-card__title">
+          Criminal
+        </h2>
+      </div>
+
+      <div class="govuk-summary-card__content">
       <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
@@ -161,6 +170,9 @@
 
         {% endif %}
       </dl>
+      </div>
+
+      </div>
 
       
 
