--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,6 +6,8 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-half">
+
+
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
       
 
@@ -51,11 +53,14 @@
         This tool has been built to help you give us feedback about the new service.
       </p> -->
 
-      <!-- {{ govukButton({
-        text: "Start",
-        href: "./create-account/create-account.html",
+      {{ govukButton({
+        text: "Research",
+        href: "./sign-in.html",
         isStartButton: true
-      }) }} -->
+      }) }}
+
+
+      
 
       <p class="govuk-body">
         <a class="govuk-link--no-visited-state" href="./search/search.html">
